--- a/.env
+++ b/.env
@@ -2,6 +2,7 @@ DB_HOST=localhost
 DB_USER=root
 DB_PASSWORD=
 DB_NAME=blog_db
+DB_PORT=3306
 JWT_SECRET=supersecreto
 PORT=3000
 HOST=http://localhost:3000
